--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Speed Vocab</string>
     <string name="title">Word Attack</string>
-    <string name="menu_choice1">Begin!</string>
+    <string name="menu_choice1">Begin</string>
     <string name="menu_choice2">Settings</string>
     <string name="edit_db_title">Add Word</string>
     <string name="menu_game_shuffle">Shuffle</string>
