Feature Added: Export Database to External Storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Speed Vocab</string>
     <string name="title">Word Attack</string>
     <string name="menu_choice1">Begin</string>
+    <string name="export_db">Export Database</string>
     <string name="menu_choice2">Settings</string>
     <string name="edit_db_title">Add Word to Database</string>
     <string name="menu_game_shuffle">Shuffle</string>
