--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
-    <string name="app_name">Speed Vocab</string>
-    <string name="title">Word Attack</string>
-    <string name="menu_choice1">Begin</string>
+    <string name="app_name">My Flashcards</string>
+    <string name="title">Flashcards</string>
+    <string name="menu_choice1">Time Attack</string>
     <string name="menu_choice2">Edit Database</string>
     <string name="export_db">Export Database</string>
     <string name="menu_choice3">Settings</string>
     <string name="edit_db_title">Edit Database</string>
     <string name="menu_game_shuffle">Shuffle</string>
     <string name="menu_game_search">Search on Google</string>
+    <string name="no_intent_handler">There are no applications available to handle this action.</string>
     <string-array name="word_types">
         <item>Noun</item>
         <item>Verb</item>
