--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="menu_choice1">Time Attack</string>
     <string name="menu_choice2">Edit Database</string>
     <string name="export_db">Export Database</string>
-    <string name="menu_choice3">Settings</string>
+    <string name="settings">Settings</string>
     <string name="edit_db_title">Edit Database</string>
     <string name="menu_game_shuffle">Shuffle</string>
     <string name="menu_game_search">Search on Google</string>
