--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,34 @@
 <resources>
     <string name="app_name">My Flashcards</string>
+
     <string name="title">Flashcards</string>
-    <string name="menu_choice1">Time Attack</string>
-    <string name="menu_choice2">Edit Database</string>
+
+    <!-- Home page menu options -->
+    <string name="home_choice1">Time Attack</string>
+    <string name="home_choice2">Edit Database</string>
+
     <string name="export_db">Export Database</string>
     <string name="settings">Settings</string>
-    <string name="edit_db_title">Edit Database</string>
-    <string name="menu_game_shuffle">Shuffle</string>
+
     <string name="menu_game_search">Search on Google</string>
-    <string name="no_intent_handler">There are no applications available to handle this action.</string>
+    <string name="menu_game_shuffle">Shuffle</string>
+
+    <!-- Edit Database Option -->
     <string-array name="word_types">
         <item>Noun</item>
         <item>Verb</item>
         <item>Adjective</item>
         <item>Adverb</item>
     </string-array>
+    <string name="hint_word">Word</string>
+    <string name="hint_type">Type</string>
+    <string name="hint_meaning">Meaning</string>
+    <string name="hint_synonyms">Synonyms</string>
+    <string name="hint_example">Example</string>
+    <string name="btn_look_online">Look Online</string>
+    <string name="btn_add_word">Add Word</string>
+    <string name="btn_update_word">Update Word</string>
+
+    <string name="no_intent_handler">There are no applications available to handle this action.</string>
+
 </resources>
